# gta_taxi_optimizer

./: CMakeLists.txt  README.md
examples/: model.model  optimization.cfg  optimization_mt.cfg  optimization_mt_max.cfg  optimization_mt_min.cfg  random.model
src/: Array2.h  gtasa_taxi_sim.cpp
